Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69159

Android: tst_QWindow::initialSize fails

XMLWordPrintable

    • Android
    • f92e1953699b2529cc6ea2fd399fe4f2b887e83c (qt/qtbase/dev) 65647d01f1509dc6d1e545a75b882addafb2dcfa (qt/qtbase/5.15)

      I/QTestLib(11729): FAIL! : tst_QWindow::initialSize() '(w.width() > 0)' returned FALSE. ()
      I/QTestLib(11729): Loc: [D:\projects\qt\clean-dev\src\qtbase\tests\auto\gui\kernel\qwindow\tst_qwindow.cpp(1852)]

        For Gerrit Dashboard: QTBUG-69159
        # Subject Branch Project Status CR V

            piotrmi Piotr Mikolajczyk
            manordheim Mårten Nordheim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes